# google-hash-code-2022-cpp-practise

./: .gitignore  CMakeLists.txt  README.md
resources/output-files/: b_better_start_small.in_result.txt  c_collaboration.in_result.txt  d_dense_schedule.in_result.txt
src/: main.cpp
src/models/: LinkedList.h  Person.cpp  Person.h  Project.cpp  Project.h  Skill.cpp  Skill.h
src/services/: FileService.cpp  FileService.h  ProcessingService.cpp  ProcessingService.h
src/utils/: LinkedList.h  StringUtils.h
